use fixed oracle code from go-spacemesh. change apis to match
